--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -5,6 +5,16 @@ default-character-set = utf8mb4
 default-character-set = utf8mb4
 
 [mysqld]
-character-set-client-handshake = FALSE
-character-set-server           = utf8mb4
-collation-server               = utf8mb4_unicode_ci
+user = mysql
+pid-file = /run/mysqld/mysqld.pid
+socket = /run/mysqld/mysqld.sock
+port = 3306
+basedir = /usr
+datadir = /var/lib/mysql
+tmpdir = /tmp
+lc-messages-dir = /usr/share/mysql
+skip-external-locking
+bind-address = 0.0.0.0
+
+character-set-server = utf8mb4
+collation-server = utf8mb4_unicode_ci
