--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,7 +1,9 @@
 FROM debian:bullseye
 
 RUN apt-get update && \
-    apt-get install -y nginx
+    apt-get install -y nginx && \
+    ln -sf /dev/stdout /var/log/nginx/access.log && \
+    ln -sf /dev/stderr /var/log/nginx/error.log
 
 COPY ./conf/nginx.conf /etc/nginx/conf.d/nginx.conf
 
