--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,13 +1,13 @@
-FROM debian:bullseye
-
-WORKDIR /var/www/html
+FROM debian:bullseye-slim
 
 RUN apt-get update \
     && apt-get install -y wget php7.4 php7.4-curl php7.4-imagick php7.4-xml php7.4-zip php7.4-xmlreader php7.4-ssh2 php7.4-gd php7.4-fpm php7.4-mysql mariadb-client
 
+RUN mkdir -p /run/php
+
 COPY ./www.conf /etc/php/7.4/fpm/pool.d/www.conf
 
-RUN mkdir -p /run/php
+WORKDIR /var/www/html
 
 RUN wget https://wordpress.org/latest.tar.gz && \
     tar -xzvf latest.tar.gz && \
