--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,16 +1,15 @@
 FROM debian:bullseye-slim
 
 RUN apt-get update && \
-    apt-get install -y nginx openssl && \
+    apt-get install -y nginx openssl dumb-init && \
     ln -sf /dev/stdout /var/log/nginx/access.log && \
     ln -sf /dev/stderr /var/log/nginx/error.log
 
 COPY ./conf/default.conf /etc/nginx/conf.d/default.conf
-COPY ./tools/generate_certificates.sh ./generate_certificates.sh
-
-RUN chmod +x /generate_certificates.sh && \
-    ./generate_certificates.sh
+COPY ./tools/init_nginx.sh /init_nginx.sh
 
 EXPOSE 433
 
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+
+CMD ["/init_nginx.sh"]
