--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,9 +1,7 @@
 FROM debian:bullseye-slim
 
 RUN apt-get update && \
-    apt-get install -y nginx openssl dumb-init && \
-    ln -sf /dev/stdout /var/log/nginx/access.log && \
-    ln -sf /dev/stderr /var/log/nginx/error.log
+    apt-get install -y nginx openssl dumb-init
 
 COPY ./conf/default.conf /etc/nginx/conf.d/default.conf
 COPY ./tools/init_nginx.sh /init_nginx.sh
