--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,30 +1,12 @@
 FROM debian:bullseye-slim
 
-ARG MYSQL_DATABASE
-ARG MYSQL_ROOT_PASSWORD
-ARG MYSQL_USER
-ARG MYSQL_PASSWORD
-
 RUN apt-get update && \
-    apt-get install -y mariadb-server
+    apt-get install -y mariadb-server dumb-init
 
-COPY ./conf/my.cnf /etc/mysql/
-#COPY ./tools/docker-entrypoint.sh /docker-entrypoint.sh
-
-#RUN chmod +x /docker-entrypoint.sh
-
-RUN mkdir -p /var/lib/mysql /var/run/mysqld; \
-    chown -R mysql:mysql /var/lib/mysql /var/run/mysqld; \
-    chmod 777 /var/run/mysqld
-
-RUN service mariadb start && \
-    mysql -u root -e "ALTER USER 'root'@'localhost' IDENTIFIED BY '${MYSQL_ROOT_PASSWORD}'; FLUSH PRIVILEGES; \
-                      CREATE DATABASE ${MYSQL_DATABASE} CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci; \
-                      CREATE USER '${MYSQL_USER}'@'%' IDENTIFIED BY '${MYSQL_PASSWORD}'; \
-                      GRANT ALL PRIVILEGES ON ${MYSQL_DATABASE}.* TO '${MYSQL_USER}'@'%'; \
-                      FLUSH PRIVILEGES;"
+COPY ./conf/my.cnf /etc/mysql/my.cnf
+COPY ./tools/docker-entrypoint.sh /docker-entrypoint.sh
 
 EXPOSE 3306
 
-#ENTRYPOINT ["/docker-entrypoint.sh"]
-CMD ["mysqld", "--user=root"]
+ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+CMD ["/docker-entrypoint.sh"]
