--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,10 +4,9 @@ RUN apt-get update && \
     apt-get install -y nginx openssl dumb-init
 
 COPY ./conf/default.conf /etc/nginx/conf.d/default.conf
-COPY ./tools/init_nginx.sh /init_nginx.sh
+COPY tools/docker-entrypoint.sh /docker-entrypoint.sh
 
 EXPOSE 433
 
 ENTRYPOINT ["/usr/bin/dumb-init", "--"]
-
-CMD ["/init_nginx.sh"]
+CMD ["/docker-entrypoint.sh"]
