Feat: add mount named volume to docker-compose

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -52,8 +52,18 @@ services:
 
 volumes:
   wordpress_data:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/home/admin/data/wordpress_data'
     name: wordpress_data
   mariadb_data:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/home/admin/data/mariadb_data'
     name: mariadb_data
 
 networks:
