Feat: add comment, remove http2 config in nginx.conf

--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,5 +1,5 @@
 server {
-        listen 443 ssl http2;
+        listen 443 ssl;
         server_name minseok2.42.fr;
 
         root /var/www/html;
@@ -10,15 +10,15 @@ server {
         ssl_certificate_key /etc/nginx/ssl/minseok2.42.fr.key;
 
         location / {
-                try_files $uri $uri/ =404;
+                try_files $uri $uri/ =404;                                          # Try to serve the requested URI and 404 if not found
         }
 
         location ~ \.php$ {
-                fastcgi_split_path_info ^(.+\.php)(/.+)$;
-                fastcgi_pass wordpress:9000;
-                fastcgi_index index.php;
-                include fastcgi_params;
-                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-                fastcgi_param PATH_INFO $fastcgi_path_info;
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;                           # Extract the PHP script name and additional path information
+                fastcgi_pass wordpress:9000;                                        # Pass to PHP-FPM server at wordpress:9000
+                fastcgi_index index.php;                                            # Default index for FastCGI requests
+                include fastcgi_params;                                             # Include common FastCGI parameters
+                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;   # Set PHP script filename
+                fastcgi_param PATH_INFO $fastcgi_path_info;                         # Set path info for PHP
         }
 }
